# Gramont2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.flat  Gramont2.project  Gramont2.sln  budowanie.sh  pakowanieGitaNaDellu.sh  pakowanieGitaWpracy.sh  pakowanieIprzesylanieNaDela.sh
Gramont2Test/: CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.old  Gramont2Test.project  Gramont2Test.sln  Gramont2TestZwylaczeniami.project  main.cpp
Gramont2Test/ShaderyGLSL120/: pickingFragmentShader.c  textureFragmentShader.c  triangVertexShader.c
Gramont2Test/libHelperClasses/: CMakeLists.txt  MultiModelManagerAccess.cpp  MultiModelManagerAccess.h  OglRendererMock.cpp  OglRendererMock.h  bufferloadermock.cpp  bufferloadermock.h  glFunctionsMock.cpp  glFunctionsMock.h  glshadersmock.cpp  glshadersmock.h  matrixstackmock.cpp  matrixstackmock.h  onemodelmock.cpp  onemodelmock.h  rendersystemmock.cpp  rendersystemmock.h  selectingtestaccess.cpp  selectingtestaccess.h
Gramont2Test/libTestedClasses/: CMakeLists.txt
Gramont2Test/src/: BufferLoaderTest.cpp  OGLmanagerTest.cpp  OglRendererTest.cpp  OneModelTest.cpp  OutdatedTest.cpp  RenderSystemTest.cpp  SelectingTest.cpp  ShaderTest.cpp  SurfaceTest.cpp  TextureForModelTest.cpp  TransformableTest.cpp  ViewControlNeedFixTest.cpp  ViewControlTest.cpp
Pyramid/: myOGLImmutString.cpp  myOGLString.cpp  myOGLString.h  myOGLTriangles.h  myoglmanagerpyramid.h
ShaderyCoreProfile/: illuminationShader.c  stringsFragmentShader.c  stringsImmutableFS.c  stringsImmutableVS.c  stringsVertexShader.c  textureFragmentShader.c  textureVertexShader.c  triangFragmentShader.c  triangVertexShader.c
ShaderyGLSL120/: illuminationShader.c  normalFragmentShader.c  normalVertexShader.c  picking.fs  picking.vs  pickingFragmentShader.c  pickingVertexShader.c  pomFragmentShader.c  pomFragmentShaderNieWieszaGr.c  pomFragmentShaderWieszaGrafike.c  pomVertexShader.c  triangFragmentShader.c
lib/funcs/: CMakeLists.txt  funkcje.cpp  funkcje.h  textfile.cpp  textfile.h
lib/glad/: CMakeLists.txt
lib/mathstuff/: CMakeLists.txt  mathstuff.cpp  mathstuff.h
lib/oglstuff/: CMakeLists.txt  bufferloader.cpp  bufferloader.h  myoglmanager.cpp  myoglmanager.h  oglrenderer.cpp  oglrenderer.h  oglstuff.cpp  oglstuff.h
lib/oglstuff/glad/: CMakeLists.txt
lib/oglstuff/mathstuff/: CMakeLists.txt
lib/wxApp/: CMakeLists.txt  MyApp.h  myframe.cpp  myframe.h  myglcanvas.cpp  myglcanvas.h  wxAppMain.cpp
old/: oglpfuncs.cpp  oglpfuncs.h  pickingrenderer.cpp  pomrenderer.cpp  pyramid.cpp  pyramid.h
old/Pyramid/: myOGLImmutString.h  myOGLTriangles.cpp  myoglmanagerpyramid.cpp
src/: CMakeLists.txt  myglcanvas.cpp  myglcanvas.h  myglcanvasDependencyInjection.cpp  shadersPath.h
src/GeometryModel/: box.cpp  box.h  modeldata.h  onemodel.cpp  onemodel.h  pyramid.cpp  pyramid.h  triangle.cpp  triangle.h
src/OGLManagerVersatile/: bufferloader.cpp  bufferloader.h  modelmanager.cpp  modelmanager.h  multimodelmanager.cpp  multimodelmanager.h  oglmanagerversatile.h  oglrenderer.cpp  oglrenderer.h  onemodelmanager.cpp  onemodelmanager.h  onemodelmanagerOld.cpp
src/OGLManagerVersatile/notUsed/: oglmanagerversatile.cpp  onemodelmanagerOld.h
src/Rendering/: normalmaprendersystem.cpp  normalmaprendersystem.h  normalpreproc.h  normalrenderer.cpp  normalrenderer.h  onetexturerendersystem.cpp  onetexturerendersystem.h  paralaxoclusionmaprendersystem.cpp  paralaxoclusionmaprendersystem.h  pompreproc.h  pomrenderer.cpp  pomrenderer.h  rendersystem.cpp  rendersystem.h  rendersystemmanager.cpp  rendersystemmanager.h  rspreproc.h  rspreprocdefinition.cpp
src/Selecting/: pickingbuffloader.cpp  pickingbuffloader.h  pickingrenderer.cpp  pickingrenderer.h  selectable.cpp  selectable.h  selecting.cpp  selecting.h  selectingresult.cpp
src/Surface/: convexsurface.cpp  convexsurface.h  surface.cpp  surface.h  surface1x1normals.cpp  surface1x1normals.h  surface1x3.cpp  surface1x3.h  surface1x3colors.cpp  surface1x3colors.h  surface3x1.cpp  surface3x1.h  surfaceonequad.cpp  surfaceonequad.h
src/Textures/: textureformodel.cpp  textureformodel.h  textureinmemory.cpp  textureinmemory.h
src/Transform/: transformable.cpp  transformable.h
src/ViewControl/: cameratrial.cpp  cameratrial.h  matrixstack.cpp  matrixstack.h
